<resources>
    <string translatable="false" name="app_name">Sports Match Day</string>
    <string translatable="false" name="navigation_drawer_open">Open navigation drawer</string>
    <string translatable="false" name="navigation_drawer_close">Close navigation drawer</string>
    <string translatable="false" name="nav_header_title">Android Studio</string>
    <string translatable="false" name="nav_header_subtitle">android.studio@android.com</string>
    <string translatable="false" name="nav_header_desc">Navigation header</string>

    <string name="total_athletes">Currently showing %1$s athletes</string>
    <string name="total_matches">Currently showing %1$s matches</string>
    <string name="total_squads">Currently showing %1$s squads</string>
    <string name="total_sports">Currently showing %1$s sports</string>

    <string name="menu_home">Home</string>
    <string name="menu_athletes">Athletes</string>
    <string name="menu_squads">Squads</string>
    <string name="menu_sports">Sports</string>
    <string name="menu_manage">Manage</string>
    <string name="menu_settings">Settings</string>

    <string name="manage">Manage</string>
    <string name="exit">Exit</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="birthday">Birthday</string>
    <string name="months">Jan,Feb,Mar,Apr,May,Jun,Jul,Aug,Sep,Oct,Nov,Dec</string>
    <string name="save">Save</string>
    <string name="sport">Sport</string>
    <string name="stadium">Stadium</string>
    <string name="date_founded">Date Founded</string>
    <string name="type">Type</string>
    <string name="gender">Gender</string>
    <string name="wrong_value">Wrong value</string>

    <string name="ok">OK</string>
    <string name="count">Count</string>
    <string name="participants">Participants</string>
    <string name="retry">Retry</string>
    <string name="score">Score</string>
    <string name="cancel">Cancel</string>
    <string name="squad">Squad</string>
    <string name="solo">Individual</string>

    <string name="help_gender">Only people with the selected gender can participate to this sport. You cannot change it later.</string>
    <string name="help_type">Group sports or individual sports. You cannot change it later.</string>
    <string name="help_participants">The number of the allowed participants in a match. You cannot change it later.</string>

    <string name="something_went_wrong">Something went wrong</string>
    <string name="error_blank">Cannot be blank</string>
    <string name="error_empty_country">You should select a country!</string>
    <string name="error_empty_city">Couldn\'t find this city!</string>
    <string name="error_not_enough_participants">You need at least %1$s participants for this match.</string>
    <string name="error_no_sport">You must select a sport!</string>
    <string name="error_duplicate_participant">A participant exists twice!</string>

    <string translatable="false" name="description_simple_bgg">A simple background image</string>
    <string translatable="false" name="description_athlete">The image of the athlete</string>
    <string translatable="false" name="description_squad">The image of the squad</string>
    <string translatable="false" name="fob_add">Add new item relevant to the screen</string>
    <string translatable="false" name="description_squad_athlete">The image of the athlete or the squad in the current event.</string>
    <string translatable="false" name="description_type">The type of sport (Team or Individual)</string>
    <string translatable="false" name="description_gender">The gender of the sport or the individual.</string>
    <string translatable="false" name="description_sport_icon">The icon of the sport</string>
    <string translatable="false" name="debug_off">Debug Off</string>
    <string translatable="false" name="debug_on">Debug On</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning_delete_athletes">Do you want to also delete the matches that this athlete has participated?</string>
    <string name="warning_delete_squads">Do you want to also delete the matches that this squad has participated?</string>
    <string name="warning_delete_sports">Do you want to also delete the matches with this sport?</string>
    <string name="warning_delete_athletes_squads"><![CDATA[Delete Athletes & Squads]]></string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="analytics_squad_wins">Squads with the most wins.</string>
    <string name="analytics_popular_sports">The most popular sports.</string>
    <string name="log_out">Log out</string>
    <string name="debug_crash">This is a debug crash to demonstrate how the app handles it</string>
    <string name="error_user_not_logged_in">You must be signed in to do this action.</string>
    <string name="find_in_maps">Find in maps</string>

</resources>