<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_sport"
        android:layout_width="126dp"
        android:layout_height="122dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/image_sports"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/editText_name"
        style="@style/RoundedEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:hint="@string/name"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_sport" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        app:layout_constraintBottom_toTopOf="@+id/toggle_gender"
        app:layout_constraintStart_toStartOf="@+id/toggle_gender" />

    <ImageButton
        android:id="@+id/button_help_gender"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_help"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/container_gender_help"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:minHeight="70dp"
        android:background="@color/colorBackgroundCard"
        android:visibility="invisible"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_help_gender"
        app:layout_constraintStart_toEndOf="@+id/button_help_gender">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/help_gender"/>
    </com.google.android.material.card.MaterialCardView>

    <ToggleButton
        android:id="@+id/toggle_gender"
        android:layout_width="101dp"
        android:layout_height="36dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_toggle_gender"
        android:checked="false"
        android:textOff=""
        android:textOn=""
        app:layout_constraintStart_toStartOf="@+id/editText_name"
        app:layout_constraintTop_toBottomOf="@+id/editText_name" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        app:layout_constraintBottom_toTopOf="@+id/toggle_type"
        app:layout_constraintStart_toStartOf="@+id/toggle_gender" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/container_type_help"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:minHeight="70dp"
        android:background="@color/colorBackgroundCard"
        android:visibility="invisible"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_help_type"
        app:layout_constraintStart_toEndOf="@+id/button_help_type">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/help_type"/>
    </com.google.android.material.card.MaterialCardView>

    <ImageButton
        android:id="@+id/button_help_type"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_help"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <ToggleButton
        android:id="@+id/toggle_type"
        android:layout_width="101dp"
        android:layout_height="36dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_toggle_type"
        android:checked="false"
        android:textOff=""
        android:textOn=""
        app:layout_constraintStart_toStartOf="@+id/toggle_gender"
        app:layout_constraintTop_toBottomOf="@+id/toggle_gender" />

    <ProgressBar
        android:id="@id/progress_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/colorPrimary"
        android:drawableStart="@drawable/ic_save"
        android:padding="5dp"
        android:text="@string/save"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>