<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.sports_match_day.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_match_add"
            app:destination="@id/nav_match_add">

            <argument
                android:name="matchId"
                android:defaultValue="-1"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_match_add"
        android:name="com.example.sports_match_day.ui.home.manage.MatchesManageFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_add_matches">
        <argument
            android:name="matchId"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_athletes"
        android:name="com.example.sports_match_day.ui.athletes.AthletesFragment"
        android:label="@string/menu_athletes"
        tools:layout="@layout/fragment_athletes">
        <action
            android:id="@+id/action_nav_athletes_to_nav_athletes_add"
            app:destination="@id/nav_athletes_add"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@anim/fui_slide_out_left" />
    </fragment>

    <fragment
        android:id="@+id/nav_athletes_add"
        android:name="com.example.sports_match_day.ui.athletes.add.AthletesAddFragment"
        android:label="@string/menu_add"
        tools:layout="@layout/fragment_add_athlete" />

    <fragment
        android:id="@+id/nav_squads"
        android:name="com.example.sports_match_day.ui.squads.SquadsFragment"
        android:label="@string/menu_squads"
        tools:layout="@layout/fragment_squads">
        <action
            android:id="@+id/action_nav_squads_to_nav_squads_add"
            app:destination="@id/nav_squads_add">
            <argument
                android:name="squadId"
                android:defaultValue="-1"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_squads_add"
        android:name="com.example.sports_match_day.ui.squads.manage.SquadsManageFragment"
        android:label="@string/menu_add"
        tools:layout="@layout/fragment_add_squad" >
        <argument
            android:name="squadId"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_sports"
        android:name="com.example.sports_match_day.ui.sports.SportsFragment"
        android:label="@string/menu_sports"
        tools:layout="@layout/fragment_squads">
        <action
            android:id="@+id/action_nav_sports_to_nav_sports_add"
            app:destination="@id/nav_sports_add">

            <argument
                android:name="sportId"
                android:defaultValue="-1"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_sports_add"
        android:name="com.example.sports_match_day.ui.sports.manage.SportsManageFragment"
        android:label="@string/menu_sports"
        tools:layout="@layout/fragment_squads">

        <argument
            android:name="sportId"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>
</navigation>