<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_person"
        android:layout_width="126dp"
        android:layout_height="122dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/female"
        android:contentDescription="@string/description_athlete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/editText_name"
        style="@style/RoundedEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:hint="@string/name"
        android:imeOptions="actionNext"
        android:inputType="textAutoComplete|textAutoCorrect"
        android:lines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_person" />

    <AutoCompleteTextView
        android:id="@+id/editText_city"
        style="@style/RoundedEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/city"
        android:imeOptions="actionNext"
        android:inputType="textAutoComplete|textAutoCorrect"
        android:lines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintStart_toStartOf="@+id/editText_name"
        app:layout_constraintTop_toBottomOf="@id/editText_name" />

    <AutoCompleteTextView
        android:id="@+id/editText_country"
        style="@style/RoundedEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/country"
        android:imeOptions="actionDone"
        android:inputType="textAutoComplete|textAutoCorrect"
        android:lines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintStart_toStartOf="@+id/editText_city"
        app:layout_constraintTop_toBottomOf="@+id/editText_city" />

    <ToggleButton
        android:id="@+id/toggle_gender"
        android:layout_width="101dp"
        android:layout_height="36dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/bg_toggle_gender"
        android:checked="false"
        android:textOff=""
        android:textOn=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/birthday"
        app:layout_constraintBottom_toTopOf="@+id/container_spinner_day"
        app:layout_constraintStart_toStartOf="@+id/container_spinner_day" />

    <FrameLayout
        android:id="@+id/container_spinner_day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_rounded"
        app:layout_constraintEnd_toStartOf="@+id/container_spinner_month"
        app:layout_constraintStart_toStartOf="@+id/editText_country"
        app:layout_constraintTop_toBottomOf="@+id/editText_country">

        <Spinner
            android:id="@+id/spinner_day"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="@+id/spinner_month"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_country"
            tools:listitem="@layout/item_spinner" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/sport"
        app:layout_constraintBottom_toTopOf="@+id/container_spinner_sport"
        app:layout_constraintStart_toStartOf="@+id/container_spinner_sport" />

    <FrameLayout
        android:id="@+id/container_spinner_sport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/border_rounded"
        app:layout_constraintStart_toStartOf="@+id/editText_country"
        app:layout_constraintTop_toBottomOf="@+id/container_spinner_day">

        <Spinner
            android:id="@+id/spinner_sport"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="@+id/spinner_month"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_country"
            tools:listitem="@layout/item_spinner" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/container_spinner_month"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_rounded"
        app:layout_constraintEnd_toStartOf="@+id/container_spinner_year"
        app:layout_constraintStart_toEndOf="@+id/container_spinner_day"
        app:layout_constraintTop_toTopOf="@+id/container_spinner_day">

        <Spinner
            android:id="@+id/spinner_month"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_spinner" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/container_spinner_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:background="@drawable/border_rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/container_spinner_month"
        app:layout_constraintTop_toTopOf="@+id/container_spinner_month">

        <Spinner
            android:id="@+id/spinner_year"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_spinner" />
    </FrameLayout>

    <ProgressBar
        android:id="@id/progress_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_spinner_month" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:drawableStart="@drawable/ic_save"
        android:padding="5dp"
        android:text="@string/save"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_spinner_sport" />
</androidx.constraintlayout.widget.ConstraintLayout>