<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:checked="false"
        android:textColor="@color/colorAccent"
        android:textOff="@string/debug_off"
        android:textOn="@string/debug_on"
        android:thumb="@drawable/switch_thumb_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:showText="true"
        app:switchTextAppearance="@style/SwitchTextStyle"
        app:track="@drawable/switch_track" />

    <ImageButton
        android:id="@+id/button_greek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="@+id/switch_debug"
        app:layout_constraintTop_toBottomOf="@+id/switch_debug"
        app:srcCompat="@drawable/greek" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"/>

    <ImageButton
        android:id="@+id/button_english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toEndOf="@+id/button_greek"
        app:layout_constraintTop_toBottomOf="@+id/switch_debug"
        app:srcCompat="@drawable/english" />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:text="@string/log_out"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_greek" />
</androidx.constraintlayout.widget.ConstraintLayout>